<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">avas_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
  <string name="msg_if_you_subscrib">If you subscribe to Bravo Studio with your Apple account, you can only manage your subscription from your device. </string>
  <string name="msg_enable_notifica2">Enable Notifications</string>
  <string name="msg_vklju_ite_medit">Vključite meditacijo v svojo vsakodnevno rutino.</string>
  <string name="lbl_reset_password">Reset password</string>
  <string name="lbl_phone">Phone</string>
  <string name="msg_already_have_an">Already have an account?</string>
  <string name="msg_designed_with_t2">Designed with the </string>
  <string name="msg_restore_purchas">Restore Purchases</string>
  <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
  <string name="lbl_phone_number">Phone number</string>
  <string name="lbl_featured">Featured</string>
  <string name="lbl_skip2">SKIP</string>
  <string name="lbl_search_term">Search term...</string>
  <string name="msg_your_favourite">Your Favourite sessions</string>
  <string name="lbl_prijavi_se">Prijavi se</string>
  <string name="lbl_edit">Edit</string>
  <string name="msg_terms_of_servic2">Terms of Service</string>
  <string name="msg_enabled_notific">Enabled Notifications</string>
  <string name="lbl_meditation">Meditation</string>
  <string name="msg_sign_in_with_go">Sign in with Google</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_meditacije">Meditacije</string>
  <string name="msg_or_continue_wit">or continue with</string>
  <string name="lbl_sign_out">Sign out</string>
  <string name="lbl_try_again">Try again</string>
  <string name="lbl_name_email_com">name@email.com</string>
  <string name="msg_all_your_inform">All your information in one place</string>
  <string name="msg_unlock_exclusiv">Unlock exclusive content</string>
  <string name="lbl_save_edits">Save edits</string>
  <string name="lbl_title">Title</string>
  <string name="lbl_password">Password</string>
  <string name="msg_sounds_meditat">Sounds 
Meditation</string>
  <string name="msg_name_of_the_ses">Name of the session</string>
  <string name="msg_payment_not_com">Payment not completed</string>
  <string name="lbl_birthday">Birthday</string>
  <string name="lbl_my_profile">My profile</string>
  <string name="lbl_personal_info">Personal info</string>
  <string name="msg_get_password_re">Get password reset email</string>
  <string name="msg_si_pozabil_gesl">Si pozabil geslo?</string>
  <string name="lbl_prijava">Prijava</string>
  <string name="lbl_category">Category</string>
  <string name="lbl_phone_number2">phone number</string>
  <string name="msg_create_a_new_ac">Create a new account</string>
  <string name="lbl_categories">Categories</string>
  <string name="msg_spring_meditat">Spring 
Meditation</string>
  <string name="msg_welcome_to_the">Welcome to the Meditation app</string>
  <string name="msg_designed_with_t">Designed with the Bravo Team to help you understand how to build a complete app in Bravo Studio</string>
  <string name="msg_prijava_z_googl">Prijava z Googlom</string>
  <string name="msg_obvladujte_stre">Obvladujte stres in zmanjšajte negativnost.</string>
  <string name="lbl_see_all">See all</string>
  <string name="lbl_contact_us">Contact us</string>
  <string name="lbl_12_12_1989">12/12/1989</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="lbl_upgrade">✨ Upgrade</string>
  <string name="msg_get_daily_affir">Get Daily Affirmations</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur.</string>
  <string name="lbl_name">Name</string>
  <string name="msg_you_re_on_premi">You\u2019re on Premium.</string>
  <string name="lbl_and">and</string>
  <string name="lbl_skip">Skip</string>
  <string name="lbl_privacy_policy"> Privacy Policy</string>
  <string name="lbl_email_email_com2">Email@email.com</string>
  <string name="lbl">.</string>
  <string name="lbl_sam_morrison">Sam Morrison</string>
  <string name="msg_terms_conditi">Terms &amp; conditions</string>
  <string name="lbl_general_info">General info</string>
  <string name="msg_enable_notifica">Enable notifications to start your day with a positive affirmation, delivered to you every morning.</string>
  <string name="lbl_sounds">Sounds</string>
  <string name="lbl_premium">Premium</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_log_in2">Log in</string>
  <string name="lbl_bookmarks">Bookmarks</string>
  <string name="msg_potrebuje_nov">Potrebuješ nov račun?</string>
  <string name="lbl_you_re_on">You\u2019re on </string>
  <string name="lbl_678598678">678598678</string>
  <string name="msg_subscribe_for_4">Subscribe for 4,99\u20ac/Month</string>
  <string name="lbl_login">Login</string>
  <string name="msg_create_a_new_pa">Create a new password</string>
  <string name="lbl_email_email_com">email@email.com</string>
  <string name="msg_bravo_team_to_h">Bravo Team to help you understand how to build a complete app in Bravo Studio</string>
  <string name="msg_name_of_the_med">Name of the meditation </string>
  <string name="lbl_naprej">Naprej</string>
  <string name="msg_izbolj_ajte_svo">Izboljšajte svojo osredotočenost in dobro počutje.</string>
  <string name="msg_payment_has_fai">Payment has failed. 
Please check with your payment provider for more information.</string>
  <string name="msg_short_meditatio">Short meditation sounds to help you calm down and relax yourself</string>
  <string name="lbl_ol">✨OLÉ</string>
  <string name="lbl_geslo">Geslo</string>
  <string name="lbl_0_00">0:00</string>
  <string name="msg_enter_your_emai">Enter your email</string>
  <string name="msg_terms_of_servic">Terms of Service and Privacy Policy</string>
  <string name="msg_ali_pa_nadaljuj">ali pa nadaljuj z</string>
  <string name="lbl_settings">Settings</string>
  <string name="msg_short_descripti">Short description of the session
in 2 lines</string>
  <string name="msg_unlock_all_cont">Unlock all content
Quick access to support
Cancel anytime</string>
  <string name="lbl_explore">Explore</string>
  <string name="msg_category_title">Category Title 1</string>
  <string name="msg_start_listening">Start listening your premium meditation session</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
