<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageLoginPostLoginActionVM" type="com.avassapplication.app.modules.loginpageloginpostloginaction.data.viewmodel.LoginPageLoginPostLoginActionVM"/>
    </data>
    <LinearLayout android:id="@+id/linearLoginpagelog"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <View
            android:background="@drawable/rectangle_gradient_s_amber_400_33_e_amber_400_34"
            android:id="@+id/viewRadialcompone"
            android:layout_gravity="start"
            android:layout_height="@dimen/_154pxv" android:layout_width="@dimen/_375pxh"/>
        <ImageView android:id="@+id/imageLOTUS"
            android:layout_gravity="start"
            android:layout_height="@dimen/_64pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="@dimen/_100pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_lotus_red_200"
            tools:ignore="ContentDescription" tools:src="@drawable/img_lotus_red_200"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLogin"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtLogin}"
            style="@style/txtPoppinsbold24" tools:text="@string/lbl_prijava"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etEmailfield"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.etEmailfieldValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_geslo"
            android:id="@+id/etPasswordfield" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.etPasswordfieldValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLoginOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_3" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSipozabilgesl"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtSipozabilgesl}"
            style="@style/txtNunitosemibold17" tools:text="@string/msg_si_pozabil_gesl"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlipanadaljuj"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtAlipanadaljuj}"
            style="@style/txtNunitoregular18" tools:text="@string/msg_ali_pa_nadaljuj"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowgoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_50cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_87pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_17pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPrijavazGoogl"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_93pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_weight="0.88" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtPrijavazGoogl}"
                style="@style/txtManropemedium16" tools:text="@string/msg_prijava_z_googl"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPotrebujenov"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtPotrebujenov}"
            style="@style/txtNunitoSansregular16_1" tools:text="@string/msg_potrebuje_nov"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSignup"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{loginPageLoginPostLoginActionVM.loginPageLoginPostLoginActionModel.txtSignup}"
            style="@style/txtPoppinsbold20_1" tools:text="@string/lbl_prijavi_se"/>
    </LinearLayout>
</layout>
