<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signupSimulationVM" type="com.avassapplication.app.modules.signupsimulation.data.viewmodel.SignupSimulationVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSignupsimulati"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <View
            android:background="@drawable/rectangle_gradient_s_amber_400_33_e_amber_400_34"
            android:id="@+id/viewRadialcompone"
            android:layout_gravity="start"
            android:layout_height="@dimen/_154pxv" android:layout_width="@dimen/_375pxh"/>
        <ImageView android:id="@+id/imageLOTUS"
            android:layout_gravity="start"
            android:layout_height="@dimen/_64pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_100pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_lotus_red_200"
            tools:ignore="ContentDescription" tools:src="@drawable/img_lotus_red_200"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtCreateanewac"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signupSimulationVM.signupSimulationModel.txtCreateanewac}"
            style="@style/txtPoppinsbold24" tools:text="@string/msg_create_a_new_ac"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etEmailfield"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={signupSimulationVM.signupSimulationModel.etEmailfieldValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_password"
            android:id="@+id/etPasswordfield"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={signupSimulationVM.signupSimulationModel.etPasswordfieldValue}"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtOrcontinuewit"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupSimulationVM.signupSimulationModel.txtOrcontinuewit}"
            style="@style/txtNunitoregular18" tools:text="@string/msg_or_continue_wit"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowgoogle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylebluegray_50cornerRadius">
            <ImageView android:id="@+id/imageGoogle"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_87pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="@dimen/_17pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" tools:src="@drawable/img_google"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSigninwithGo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_83pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_weight="0.89" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{signupSimulationVM.signupSimulationModel.txtSigninwithGo}"
                style="@style/txtManropemedium16" tools:text="@string/msg_sign_in_with_go"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtConfirmation"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupSimulationVM.signupSimulationModel.txtConfirmation}"
            style="@style/txtNunitoSansregular16" tools:text="@string/msg_already_have_an"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLogin"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signupSimulationVM.signupSimulationModel.txtLogin}"
            style="@style/txtPoppinsbold20_1" tools:text="@string/lbl_log_in2"/>
    </LinearLayout>
</layout>
