<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="postLoginInfoFormVM" type="com.avassapplication.app.modules.postlogininfoform.data.viewmodel.PostLoginInfoFormVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPostlogininfo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearTopbarcontain"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSKIPactioncl"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{postLoginInfoFormVM.postLoginInfoFormModel.txtSKIPactioncl}"
                style="@style/txtPoppinsmedium16_1" tools:text="@string/lbl_skip2"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtApptitle"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{postLoginInfoFormVM.postLoginInfoFormModel.txtApptitle}"
                style="@style/txtPoppinsbold31" tools:text="@string/lbl_personal_info"/>
        </LinearLayout>
        <ImageView android:id="@+id/imageImagecompone"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_159pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="@dimen/_159pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_imagecompone}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_imagecompone"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_300_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_name"
            android:id="@+id/etNameinput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={postLoginInfoFormVM.postLoginInfoFormModel.etNameinputValue}"
            android:textColorHint="@color/indigo_200"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_300_radius_10"
            android:ellipsize="end" android:hint="@string/lbl_birthday"
            android:id="@+id/etBirthdayinput" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={postLoginInfoFormVM.postLoginInfoFormModel.etBirthdayinputValue}"
            android:textColorHint="@color/indigo_200"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_gray_300_radius_10"
            android:ellipsize="end"
            android:hint="@string/lbl_phone_number"
            android:id="@+id/etTelinput" android:inputType="phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_19pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@={postLoginInfoFormVM.postLoginInfoFormModel.etTelinputValue}"
            android:textColorHint="@color/indigo_200"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_112pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_continue"/>
    </LinearLayout>
</layout>
