<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboardingIntroVM" type="com.avassapplication.app.modules.onboardingintro.data.viewmodel.OnboardingIntroVM"/>
    </data>
    <LinearLayout android:id="@+id/linearOnboardingIntr"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <ImageView android:gravity="start" android:id="@+id/imageImg"
            android:layout_height="@dimen/_398pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY" imageRes="@{@drawable/img_img_1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_img_1"/>
        <ImageView android:id="@+id/imageUser"
            android:layout_gravity="start"
            android:layout_height="@dimen/_57pxh"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_89pxh"
            android:scaleType="fitXY" android:src="@drawable/img_user"
            tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
        <TextView android:gravity="start" android:id="@+id/txtTitle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:text="@{onboardingIntroVM.onboardingIntroModel.txtTitle}"
            style="@style/txtPoppinsbold24_1" tools:text="@string/msg_welcome_to_the"/>
        <TextView android:gravity="start"
            android:id="@+id/txtDesignedwitht"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:text="@{onboardingIntroVM.onboardingIntroModel.txtDesignedwitht}"
            style="@style/txtLatomedium15" tools:text="@string/msg_designed_with_t"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_23pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_70pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded_3" tools:text="@string/lbl_continue"/>
    </LinearLayout>
</layout>
